--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+
+
+h1 {
+    font-family: 'OldStandardTT', serif;
+}
+
 body {
     background: #c4ac8d radial-gradient(#3d322c, #985f56, #ecd6cc);
 }
