--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -16,8 +16,13 @@
     padding-right: 0;
     text-align: left;
     cursor: default;
-
 }
+
+.rbc-event {
+    background-color: inherit !important; /* Używamy koloru z komponentu */
+    border: none !important; /* Usuń domyślną ramkę */
+}
+
 
 /* Zmiana kursora na default dla komórek dni w kalendarzu */
 .rbc-date-cell {
@@ -30,6 +35,16 @@
 
 .rbc-button-link {
     cursor: default; /* Zwykły wskaźnik dla przycisków w dniu */
+}
+
+.rbc-calendar {
+    transform: scale(1, 0.8);
+    transform-origin: top left; /* Skala względem lewego górnego rogu */
+}
+
+.rbc-row.rbc-month-header {
+    height: 30px; /* Zwiększ wysokość według potrzeb */
+    line-height: 30px; /* Wyrównaj tekst w pionie */
 }
 
 
